feat: add auth logic

--- a/.env.sample
+++ b/.env.sample
@@ -1,2 +1,4 @@
 OPENAI_API_KEY=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 TW_TOKEN=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+ADMIN_USERNAME=your_username
+ADMIN_PASSWORD=your_secure_password
